--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ABSO",
+  "name": "abso",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.5.1",
+    "@discordjs/opus": "^0.3.2",
+    "discord.js": "^11.6.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
