--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "author": "",
+  "author": "KraY",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
