--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "list": "^2.0.19",
     "node.js": "0.0.1-security",
-    "npm": "^6.14.11"
+    "npm": "^6.14.12",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
