General modifies to patch with commands import and matchamaking created

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
     "prefix": "-",
-    "favourite_song": "ANIMALS DEI MAROON 5"
+    "favourite_song": "ANIMALS DEI MAROON 5",
+    "default_color": "#771177"
 }
