Removed typo in "You doesn't seem to be eligible"

--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
     "channelComments": "842431449197969420",
     "channelPastMatches": "845581707301748736",
     "channelRanking": "725398092358090772",
+    "channelSendRanks": "725399078397018113",
     "channelsLobbies": [
         "829412870700793887",
         "829419027012124702",
